Update new page Wawasan AI.

--- a/Fe/package.json
+++ b/Fe/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "@vercel/kv": "^3.0.0",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.3.1",
     "recharts": "^3.1.0"
   },
